# portfolios-optimization

./: .env_sample  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  alembic.ini  app.py  app_pages.py  auth_app.py  config_api_keys  docker-compose.yml  entrypoint.sh  portfolio_analyzer.py  pyproject.toml  requirements.txt  run.bat  run.sh
.streamlit/: secrets_sample.toml
backend/app/: alembic.ini  main.py
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: 6af52553b282_add_news_analysis_result_table.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: inference.py  ml_pipelines.py
backend/app/api/endpoints/: asset_router.py  auth_router.py  news_router.py  portfolio_router.py  recommendation_router.py  transaction_router.py  user_router.py  utils_router.py
backend/app/core/: config.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/db/crud/: crud_asset.py  crud_news.py  crud_portfolio.py  crud_transaction.py  crud_user.py
backend/app/models/: asset_model.py  news_model.py  portfolio_model.py  transaction_model.py  user_model.py
backend/app/schemas/: __init__.py  asset_schemas.py  auth_schemas.py  celery_task.py  common_schemas.py  inference.py  news_schemas.py  portfolio_schemas.py  recommendation_schemas.py  transaction_schemas.py
backend/app/services/: auth_service.py
backend/app/worker/: celery_app.py  tasks.py
backend/data_pipelines/clearml_pipelines/: data_update_pipeline.py
backend/data_pipelines/configs/: data_fetch_config.yaml
backend/data_pipelines/tasks/: fetch_alphavantage_news.py  fetch_binance_data.py
backend/ml_models/clearml_pipelines/: catboost_training_pipeline.py  drl_training_pipeline.py
backend/ml_models/configs/: catboost_config.yaml  drl_config.yaml
backend/ml_models/training_scripts/catboost/: data_preparation.py  evaluate_model.py  register_model.py  train_model.py
backend/ml_models/training_scripts/drl/: data_preparation_drl.py  evaluate_model_drl.py  register_model_drl.py  train_model_drl.py
backend/worker/: tasks.py
data_pipelines/clearml_pipelines/: data_update_pipeline.py
data_pipelines/tasks/: fetch_alphavantage_news.py
ml_models/clearml_pipelines/: training_pipeline_example.py
ml_models/training_scripts/: data_preparation.py  register_model.py  train_model.py
ml_pipelines/: hourly_mops_pipeline.py
notebooks/: .gitignore  1_parse_data_binance.ipynb  2_base_reb.ipynb  2_markowitz-rebalanve.ipynb  3_drl_train_catboost_BTC_no_features.ipynb  3_finrl_02_tests.ipynb  3_finrl_02_tests_catboost_BTC_yes_features.ipynb  4_finrl_mvp_results.ipynb  llama.ipynb  nlp_dataset.ipynb  portfolio_rebalance.py  portfolio_visualize.ipynb  portfolio_visualize_perfect_trading.ipynb  price_forecast_catboost.ipynb  price_forecast_catboost_news.ipynb  process_news_data.py  temp.ipynb  update_market_data.py  update_news_data.py
portfolios_optimization/: __init__.py  authentication.py  data_loader.py  hypothetical_simulator.py  model_trainer.py  portfolio_analysis.py  portfolio_optimizer.py  visualization.py
portfolios_optimization/finrobot_core/: prompts.py  utils.py  workflow.py
